# fintech-labs

./: .gitignore  README.md
.github/workflows/: terraform_infra.yml
e-ticketing/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  env.sample  load-test.sh  nest-cli.json  package-lock.json  package.json
e-ticketing/apps/authnz/: tsconfig.app.json
e-ticketing/apps/register/: tsconfig.app.json
e-ticketing/libs/shared/: constants.ts  create-microservice.ts  endpoints.ts  index.ts  performance-interceptors.ts  rpc-exception.ts  sequence-generator.ts
e-ticketing/load-testing/: script.js
e-ticketing/scripts/: replica-setup.sh  setup.js
financial-assistant/: README.md  docker-compose.yaml  env.sample  pyproject.toml
financial-assistant/backend/: .dockerignore  Dockerfile  env.sample  financial_report_sources.json  pyproject.toml
financial-assistant/backend/backend/: api.py
financial-assistant/backend/llm/: agent_logger.py  config.py  llm.py  pyproject.toml
financial-assistant/backend/llm/documents/: document.py
financial-assistant/backend/llm/extensions/: pdf_url.py
financial-assistant/backend/llm/providers/: provider.py  providers.py
financial-assistant/backend/llm/tools/: __init__.py  download_pdf.py  multiply.py  retrieve_pdf.py
financial-assistant/backend/tests/: llm_evaluation.py
financial-assistant/financial_assistant/: config.py  env.sample  llm.py  main.py
financial-assistant/financial_assistant/documents/: document.py
financial-assistant/financial_assistant/providers/: provider.py  providers.py
financial-assistant/financial_assistant/tools/: __init__.py  add.py
financial-assistant/frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
financial-assistant/frontend/public/: config.json
fraud-detection/: README.md  config.py  data_source.py  main.py  model.py  model_trainer.py  pyproject.toml
fraud-detection/config/: pyproject.toml
fraud-detection/config/src/config/: config.py
fraud-detection/trainer/: pyproject.toml
fraud-detection/trainer/src/trainer/: __init__.py
modular-payments-wallet/: Dockerfile  README.md  docker-compose.yml  nest-cli.json  package-lock.json  package.json
modular-payments-wallet/payments-wallet-kafka/: .dockerignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
modular-payments-wallet/payments-wallet-tcp/: README.md  docker-compose.yml  nest-cli.json  package.json
ops-monitoring/: README.md  main.tf  terraform.tf
ops-monitoring/compose/: plg-stack-docker-compose.yaml
ops-monitoring/config/: config.alloy.tpl  prom_ds.yaml
ops-monitoring/scripts/: alloy_install.sh  docker_install.sh  python3_install.sh  ssm_agent_install.sh
savings-automaton/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  package-lock.json  savings-automaton.yaml
savings-automaton/api/: cron_tasks.js  eslint.config.mjs  jest.config.js  jest.db_utils.js  jest.setup.js  jest.teardown.js  knexfile.js  migrate.js  package-lock.json  package.json  server.js  start.sh
savings-automaton/api/__tests__/: db.tests.js  server.tests.js
savings-automaton/server/: .dockerignore  .gitignore  Dockerfile  config.example.yaml  jest.config.ts  package-lock.json  package.json  start.sh
savings-automaton/src/: package-lock.json  package.json
terraform-infra/: README.md  main.tf
testing/: config.alloy  docker-compose.yaml
(+188 files in other folders)
