[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ngendah <ngendah@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llm = {path = "llm", develop = true}
fastapi = {extras = ["standard"], version = "^0.116.1"}

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.15.0"
autoflake = "^2.3.1"
ipython = "^9.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
