[project]
name = "config"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ngendah", email = "ngendah@pm.me" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
