[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["ngendah <ngendah@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index = "^0.12.49"
llama-index-embeddings-ollama = "^0.6.0"
llama-index-llms-ollama = "^0.6.2"
fastapi = "^0.116.1"
pydantic-settings = "^2.10.1"
langchain-community = "^0.3.27"
langchain-ollama = "^0.3.5"
llama-index-readers-web = "^0.4.4"
llama-index-llms-google-genai = "^0.2.5"
langchain-google-genai = "^2.1.8"
llama-index-embeddings-google-genai = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
